On Windows, Kleopatra uses the normal Breeze color schemes even if high contrast mode is enabled.
That's a regression which was introduced with rKLEOPATRA6772572c443c which removed the check for high contrast mode.
On Windows, Kleopatra uses the normal Breeze color schemes even if high contrast mode is enabled.
That's a regression which was introduced with rKLEOPATRA6772572c443c which removed the check for high contrast mode.
| rKLEOPATRA Kleopatra | |||
| rKLEOPATRAe225b51451ad Revert "Don't instantiate KColorSchemeManager if high contrast mode is active" | |||
| rKLEOPATRA3aabc423d9ce Don't instantiate KColorSchemeManager if high contrast mode is active | |||
| rW Gpg4win | |||
| rW9810d151ce55 kguiaddons: Fix mix-up of dark mode and light mode | |||
| rWb710e0752a82 Add patches for supporting high-contrast mode in KF6 | |||
| Status | Assigned | Task | ||
|---|---|---|---|---|
| Resolved | • ikloecker | T6872 Prepare transition to Qt 6/KF6 | ||
| Resolved | • ikloecker | T6932 Icons, darkmode and stuff | ||
| Resolved | • ikloecker | T7587 Kleopatra: High contrast mode isn't respected anymore |
Fixed. There are still some problems with the icons but those will be dealt with in a separate subticket of T6932: Icons, darkmode and stuff.
For reference the related MRs for upstream:
https://invent.kde.org/frameworks/kguiaddons/-/merge_requests/170 (merged)
https://invent.kde.org/frameworks/kcolorscheme/-/merge_requests/43 (merged)