Don't instantiate KColorSchemeManager if high contrast mode is active

KColorSchemeManager doesn't know anything about high contrast mode.

GnuPG-bug-id: 7587